--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,4 @@ TaskParallelLibrary/bin
 .vs/*
 TaskParallelLibrary/obj
 TaskParallelLibrary/Properties
-AsynchronousProgramming.sln
+Asynchronous_Programming.sln
