modified git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@
 TaskParallelLibrary/bin
 .vs/*
 TaskParallelLibrary/obj
+TaskParallelLibrary/vs/*
 TaskParallelLibrary/Properties
 Asynchronous_Programming.sln
